<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:foreground="@drawable/clickable_ripple_layout"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/move_to_new"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvInProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:foreground="@drawable/clickable_ripple_layout"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/move_to_progress"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvInReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:foreground="@drawable/clickable_ripple_layout"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/move_to_review"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:foreground="@drawable/clickable_ripple_layout"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/move_to_done"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>